# epub_from_telegram

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
app/: downloader.py  epub_builder.py  main.py  telegraph_parser.py
